--- a/app/src/main/res/layout/fragment_order_dialog.xml
+++ b/app/src/main/res/layout/fragment_order_dialog.xml
@@ -15,11 +15,11 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/pizza_description"
+        android:id="@+id/pizza_size"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Pizza Description" />
+        android:text="Pizza Size" />
 
     <TextView
         android:id="@+id/pizza_price"
@@ -28,18 +28,19 @@
         android:layout_marginTop="8dp"
         android:text="Pizza Price" />
 
-    <TextView
-        android:id="@+id/pizza_size"
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/quantity_edit_text"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Pizza Size" />
+        android:layout_marginTop="16dp"
+        android:hint="Quantity"
+        android:inputType="number" />
 
-    <TextView
-        android:id="@+id/pizza_category"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/submit_button"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Pizza Category" />
+        android:layout_marginTop="16dp"
+        android:text="Submit" />
 
 </LinearLayout>
