--- a/app/src/main/res/layout/item_pizza.xml
+++ b/app/src/main/res/layout/item_pizza.xml
@@ -26,6 +26,13 @@
         android:text="Add to Favorites"/>
 
     <Button
+        android:id="@+id/removeFromFavoritesButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Remove from Favorites"
+        android:visibility="gone"/>
+
+    <Button
         android:id="@+id/orderButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
