--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -22,5 +22,25 @@
             android:icon="@drawable/baseline_shopping_cart_24"
             android:title="My Orders" />
 
+        <item
+            android:id="@+id/nav_Special_Offers"
+            android:icon="@drawable/baseline_star_24"
+            android:title="Special Offers" />
+
+        <item
+            android:id="@+id/nav_Profile"
+            android:icon="@drawable/baseline_person_24"
+            android:title="Profile" />
+
+        <item
+            android:id="@+id/nav_Contact_Us"
+            android:icon="@drawable/baseline_contacts_24"
+            android:title="Contact Us" />
+
+        <item
+            android:id="@+id/nav_Logout"
+            android:icon="@drawable/baseline_logout_24"
+            android:title="Logout" />
+
     </group>
 </menu>
