--- a/app/src/main/res/layout/activity_get_started.xml
+++ b/app/src/main/res/layout/activity_get_started.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activites.GetStartedActivity">
+    tools:context=".activites.lets_start.GetStartedActivity">
 
         <ImageView
             android:id="@+id/imageView"
