--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -29,7 +29,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/emailTextView_top_nav_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/ahmadszubaidia_gmail_com" />
