--- a/app/src/main/res/layout/fragment_special_offers.xml
+++ b/app/src/main/res/layout/fragment_special_offers.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui_admin.admin.vieworders.ViewOrdersFragment">
+    tools:context=".ui.SpecialOffers.SpecialOffersFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewOrders"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:id="@+id/recyclerViewSpecialOffers"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
