--- a/app/src/main/res/layout/fragment_view_orders.xml
+++ b/app/src/main/res/layout/fragment_view_orders.xml
@@ -27,10 +27,10 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
-            android:id="@+id/tvPizzaOrderCounts"
+            android:id="@+id/tvTotalOrders"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Pizza Order Counts"
+            android:text="Total Orders"
             android:textStyle="bold"
             android:paddingBottom="8dp"/>
 
@@ -42,12 +42,12 @@
             android:textStyle="bold"
             android:paddingBottom="8dp"/>
 
-        <TextView
-            android:id="@+id/tvIncomePerPizzaType"
+        <Button
+            android:id="@+id/btnViewDetailedStats"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Income per Pizza Type"
-            android:paddingBottom="8dp"/>
-
+            android:text="View Detailed Statistics"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"/>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
