--- a/app/src/main/res/layout/fragment_add_offers.xml
+++ b/app/src/main/res/layout/fragment_add_offers.xml
@@ -51,43 +51,53 @@
 
     <Spinner
         android:id="@+id/pizzaTypeSpinner"
+        style="@style/CustomSpinnerStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:backgroundTint="#CCCCCC"
+        android:minHeight="48dp"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.291"
+
+        app:layout_constraintVertical_bias="0.308"
         app:layout_constraintWidth_percent=".8" />
 
     <Spinner
         android:id="@+id/categorySpinner"
+        style="@style/CustomSpinnerStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:entries="@array/category_array"
         android:backgroundTint="#CCCCCC"
+        android:entries="@array/category_array_offer"
+        android:minHeight="48dp"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.357"
+
+        app:layout_constraintVertical_bias="0.401"
         app:layout_constraintWidth_percent=".8" />
 
     <Spinner
         android:id="@+id/sizeSpinner"
+        style="@style/CustomSpinnerStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:entries="@array/size_array"
         android:backgroundTint="#CCCCCC"
+        android:entries="@array/size_array_add_offer"
+        android:minHeight="48dp"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.434"
+
+
+        app:layout_constraintVertical_bias="0.499"
         app:layout_constraintWidth_percent=".8" />
 
     <EditText
@@ -95,7 +105,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:backgroundTint="#CCCCCC"
-        android:drawableLeft="@drawable/baseline_attach_email_24"
+        android:drawableLeft="@drawable/baseline_access_time_filled_24"
         android:drawablePadding="13dp"
         android:hint="Offer Period"
         android:textColorHint="@color/white"
@@ -112,7 +122,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:backgroundTint="#CCCCCC"
-        android:drawableLeft="@drawable/baseline_ad_units_24"
+        android:drawableLeft="@drawable/baseline_monetization_on_24"
         android:drawablePadding="13dp"
         android:hint="Total Price"
         android:textColorHint="@color/white"
