--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,8 @@
     <color name="bottombartext">#FCF0CC</color>
 
     <color name="black_overlay">#66000000</color>
+
+    <!-- res/values/colors.xml -->
+    <color name="spinner_text_color">#000000</color>
+
 </resources>
