--- a/app/src/main/res/layout/fragment_special_offers.xml
+++ b/app/src/main/res/layout/fragment_special_offers.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.SpecialOffers.SpecialOffersFragment">
+    tools:context=".ui_normal_user.SpecialOffers.SpecialOffersFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewSpecialOffers"
