--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activites.login_reg.RegistrationActivity">
+    tools:context=".start_activites.login_reg.RegistrationActivity">
 
     <ImageView
         android:id="@+id/imageView"
