--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activites.lets_start.WelcomeActivity">
+    tools:context=".start_activites.lets_start.WelcomeActivity">
 
     <ImageView
         android:id="@+id/imageView"
