--- a/app/src/main/res/layout/fragment_contact_us.xml
+++ b/app/src/main/res/layout/fragment_contact_us.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.ContactUs.ContactUsFragment">
+    tools:context=".ui_normal_user.ContactUs.ContactUsFragment">
 
     <ImageView
         android:id="@+id/contact_imageView"
